--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --color-1: white;
     --color-2: grey;
     --color-3: black;
+    --color-4: slategray;
 }
 
 body, html {
@@ -131,9 +132,86 @@ body, html {
 }
 
 .container-6 {
+    overflow: hidden;
     display: flex;
-    flex-direction: row;
-    height: 500px;
-    width: auto;
+    width: 80%;
+    margin: 20px auto;
+}
+
+@keyframes slide {
+    0% {
+      transform: translateX(0%);
+    }
+    20% {
+        transform: translateX(-100%);
+    }
+    40% {
+        transform: translateX(-200%);
+    }
+    60% {
+        transform: translateX(-300%);
+    }
+    80% {
+      transform: translateX(-400%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.card {
+    flex: 0 0 auto;
+    width: 250px;
+    height: 320px;
+    margin: 10px;
+    border: 1px solid var(--color-secondary);
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    padding: 20px;
+    background-color: white;
+    cursor: pointer;
+    animation: slide 30s ease-in-out infinite;
+}
+
+.container-p5 {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    height: 700px;
     outline: solid 1px black;
+}
+
+.container-7 {
+    position: relative;
+    border-radius: 10px;
+    height: 100%;
+    width: auto;
+    margin: 50px;
+    opacity: 1;
+    outline: solid 1px black;
+}
+
+.name {
+    margin: 10px;
+    display: flex;
+    font-size: 2.25rem;
+    font-weight: bolder;
+    color: var(--color-3); 
+}
+
+.prof {
+    margin: 10px;
+    display: flex;
+    font-size: 1.75rem;
+    font-weight: bolder;
+    color: var(--color-3); 
+}
+
+.spe {
+    margin: 10px;
+    display: flex;
+    font-size: 1.50rem;
+    font-weight: bolder;
+    color: var(--color-3); 
 }
